--- a/example/android/local.properties
+++ b/example/android/local.properties
@@ -1,2 +1,5 @@
-sdk.dir=/home/jonny/Android/Sdk
-flutter.sdk=/opt/flutter
+sdk.dir=C:\\Users\\Oleg\\AppData\\Local\\Android\\sdk
+flutter.sdk=F:\\Android_Studio_Projects\\flutter
+flutter.buildMode=debug
+flutter.versionName=1.0.0
+flutter.versionCode=1
